[project]
name = "fastapi-injector"
dynamic = ["version"]
description = "python-injector integration for FastAPI"
authors = [
    {name = "Matyas Richter", email = "matyas@mrichter.cz"}
]
license = "BSD"
repository = "https://github.com/matyasrichter/fastapi-injector"
packages = [
    {include = "fastapi_injector"},
]
include = ["fastapi_injector/py.typed"]
readme = "README.md"
classifiers = [
    "Topic :: Software Development :: Libraries",
    "Framework :: FastAPI",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Typing :: Typed",
]

[tool.poetry]
version = "0"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "default-unprefixed"

[tool.poetry.dependencies]
python = ">=3.9 <3.14"
fastapi = { version = ">=0.70.0", optional = true }
fastapi-slim = { version = ">=0.111.0", optional = true }
injector = ">=0.19.0"

[tool.poetry.group.dev.dependencies]
fastapi-slim = ">=0.111.0"
httpx = ">=0.25.1,<0.28.0"
pre-commit = "^4.2.0"
pytest = ">=7.4.3,<9.0.0"
pytest-asyncio = ">=0.21.1,<1.1.0"
pytest-cov = ">=4.1,<7.0"

[tool.poetry.extras]
standard = ["fastapi"]
slim = ["fastapi-slim"]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
